Fix youtube video align center

--- a/css/style-add.css
+++ b/css/style-add.css
@@ -153,7 +153,6 @@ ul.ESG-community-support li img {
   top:0;
   left:0;
   width:100%;
-  max-width: 800px;
   height:100%;
 }
 
